[package]
name = "jt808"
version = "0.1.0"
authors = ["lwp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes="0.5.4"
tokio-util="0.2.0"
chrono ="0.4.10"
serde = "1.0.104"
serde_json = "1.0.45"
lwp-util = { version = "0.1.0", path = "../lwp-util"}

[dependencies.diesel]
version = "1.4.3"
features = ["postgres", "serde_json", "uuidv07", "chrono", "numeric"]